# ycc-to-rgb

./: .gitignore  CMakeLists.txt  README.md  execution_time.py
.github/: ci_workflow.yml
.github/workflows/: ci_workflow.yml
app/: main.c  rgb2ycc.c  ycc2rgb.c  ycctorgb.c
images/: README.md
images/inputs/: clips.ycc
images/outputs/: 2_of_a_kind.ppm  dark.pnm  ghost.ppm  lines.ppm  new_clips.ppm  pastel.pnm  squeezed.ppm
include/: conversion.h  util.h
lib/: conversion.c  util.c
testimages/: clips.ppm
